# proxyforge

./: .gitignore  CHANGELOG.md  Dockerfile  GUIDE.md  LICENSE  README.md  TUTORIAL.md  _patch_card.py  _tmp.py  build.bat  docker-compose.yml  entrypoint.sh  lisa_clean_b64.txt  one-click.sh  patch_card_menu.py  pyproject.toml  requirements.txt  run.bat  xuance.py  xuance_bot.py  xuance_sub.py  xuance_web.py
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-24-xuance-phase1-design.md
proxyforge/: __init__.py  cardgen.py  config.py  main.py  protocols.py  xray.py
systemd/: xray.service  xuance-bot.service  xuance-sub.service  xuance-web.service
vps/: install.sh  lisa.py  xuance.py
xray-conf/: 00_log.json  01_api.json  07_VLESS_vision_reality_inbounds.json  09_routing.json  12_policy.json  blackhole.json  direct.json
