[build-system]
requires = [""setuptools>=61""]
build-backend = ""setuptools.build_meta""

[project]
name = ""proxyforge""
version = ""1.0.0""
description = ""Xray multi-protocol manager + QR card generator""
authors = [{name = ""Lisa Network""}]
readme = ""README.md""
requires-python = "">=3.9""
dependencies = [
    ""qrcode>=7.4"",
    ""Pillow>=10.0"",
    ""PyYAML>=6.0"",
]

[project.scripts]
proxyforge = ""proxyforge.main:main""