[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "proxyforge"
version = "4.0.0"
description = "é¦’å¤´çš„çŽ„ç­– - Xrayå¤šåè®®ç®¡ç†+å¥—é¤å¡ç”Ÿæˆ+VPSç”¨æˆ·ç®¡ç†"
authors = [{name = "é¦’å¤´çš„çŽ„ç­–"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "qrcode>=7.4",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.scripts]
proxyforge = "proxyforge.main:main"
[tool.setuptools.packages.find]
include = ["proxyforge*"]
